Create basic layout for the page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>My Learning Journal</title>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Learning Journal</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>index.html</h1>
+    <header>
+      <h1>My Learning Journal</h1>
+    </header>
+    <section class="intro"></section>
+    <main>
+      <a href="#" class="#" aria-label="#">
+        <article>
+          <header class="article-header">
+            <p>Date</p>
+            <h2>Blog one</h2>
+            <h3>This is blog one</h3>
+          </header>
+        </article>
+      </a>
+    </main>
+    <footer>
+      <p>&copy; yamesjamess 2025</p>
+    </footer>
   </body>
 </html>
